# QASystem

./: .gitignore  pyproject.toml
QueryUI/: match.py
QueryUI/QueryApp/: apps.py  urls.py  views.py
QueryUI/QueryApp/templates/QueryApp/: result.html
QueryUI/QueryUI/: asgi.py  settings.py  urls.py  wsgi.py
