[project]
name = "qasystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "gensim>=4.3.3",
    "jieba>=0.42.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "text2vec>=1.3.7",
    "torch>=2.8.0",
    "word2vec",
]
